# OctoPrint-Phrozen-Connector

./: MANIFEST.in  README.md  SMB_SETUP.md  Taskfile.yml  pyproject.toml
extras/: README.txt  phrozen_connector.md
extras/github/: bug_report.yml  feature_request.yml
octoprint_phrozen_connector/: __init__.py
octoprint_phrozen_connector/static/css/: phrozen_connector.css
octoprint_phrozen_connector/static/js/: phrozen_connector.js
octoprint_phrozen_connector/static/js/api_connectors/: phrozen_api_connector.js
octoprint_phrozen_connector/static/js/view_models/: phrozen_connector.js
octoprint_phrozen_connector/templates/: phrozen_connector_settings.jinja2  phrozen_connector_tab.jinja2
translations/: README.txt
